# corrosion

dreirrosion/: CMakeLists.txt  helper.py  main.cpp
dreirrosion/rust_lib/: Cargo.toml
dreirrosion/rust_lib/src/: lib.rs
dreirrosion/rust_workspace/: Cargo.toml
dreirrosion/rust_workspace/rust_lib/: Cargo.toml
dreirrosion/rust_workspace/rust_lib/src/: imp.rs
dreirrosion/rust_workspace/rust_lib_two/: Cargo.toml
